--- a/Documentation.tex
+++ b/Documentation.tex
@@ -669,7 +669,7 @@ oraz warunków brzegowych pierwszego rodzaju, wyrażonymi:
 u(0,t) = g(t),&\qquad  u(a, t) = h(t), &\qquad t \in [0, T]\\
 \end{alignat*}
 
-Chcąc otrzymać pomiary ciepła, obliczamy pochodną:
+Chcąc otrzymać pomiary temperatury w poszczególnych punktach, obliczamy pochodną:
 
 \begin{alignat*}{2}
 c_i \rho _i \frac{ u^{j+1}_i - u^j_i}{ \Delta \tau}&= \lambda \frac{ u^j_{i+1} - 2u^j_i+u^j-1_i}{\Delta h^2}\\
